# MujocoGraspSim

./: .gitignore  Dockerfile  apt_manual.txt  docker-compose.yml  pub_att.py  run_mjviewer.py
catkin_ws/src/Single-Drone-Planner/bridge_node/: CMakeLists.txt  package.xml
catkin_ws/src/Single-Drone-Planner/bridge_node/config/: config.yaml
catkin_ws/src/Single-Drone-Planner/bridge_node/launch/: img_sync.launch  pcl_sync_sim.launch  pcl_sync_world.launch  pcl_sync_world_sim.launch
catkin_ws/src/Single-Drone-Planner/bridge_node/src/: bridge_node.cpp
catkin_ws/src/Single-Drone-Planner/ch_rc_sdf/: CMakeLists.txt
catkin_ws/src/Single-Drone-Planner/ch_rc_sdf/config/: params.yaml
catkin_ws/src/Single-Drone-Planner/ch_rc_sdf/include/ch_rc_sdf/: ch_rc_sdf.h  robot_kinematics.hpp  sdf_map.hpp  sdf_util.hpp  util_gym.hpp  visualization.hpp
catkin_ws/src/Single-Drone-Planner/ch_rc_sdf/launch/: test_node.launch
catkin_ws/src/Single-Drone-Planner/ch_rc_sdf/src/: ch_rc_sdf.cpp  test_node.cpp  vis_ch_rc_sdf.cpp
catkin_ws/src/Single-Drone-Planner/key_to_camPos/: CMakeLists.txt  package.xml
catkin_ws/src/Single-Drone-Planner/key_to_camPos/files/: keyboarf_UAM.pptx
catkin_ws/src/Single-Drone-Planner/key_to_camPos/launch/: key2UAM.launch  key2camPos.launch  key2camPos_unity.launch  key2unityTraj.launch
catkin_ws/src/Single-Drone-Planner/key_to_camPos/scripts/: colorbar.py  droneOdom2CameraPos.py  key_to_joy.py  key_to_joy_UAM.py  key_to_joy_free.py  simpleGoal2Odom.py  surrend_cam_pose.py
catkin_ws/src/Single-Drone-Planner/key_to_camPos/src/: joy2UAM.cpp  joy2camPos.cpp  joy2unityTraj.cpp
catkin_ws/src/Single-Drone-Planner/pcd_to_pcl/: CMakeLists.txt  package.xml
catkin_ws/src/Single-Drone-Planner/pcd_to_pcl/config/: config.yaml  config_env.yaml  config_env_0210.yaml  config_env_vicon_0210.yaml  config_env_vicon_0211.yaml  config_tgt.yaml  config_tgt_0210.yaml  config_tgt_0211.yaml  config_tgt_vicon.yaml  config_tgt_vicon_0210.yaml  config_tgt_vicon_0211.yaml  env_obj_to_vicon.yaml  tgt_obj_to_vicon.yaml
catkin_ws/src/Single-Drone-Planner/pcd_to_pcl/launch/: pub_pcl_from_pcd.launch  save_pcd_pose_to_yaml.launch
catkin_ws/src/Single-Drone-Planner/pcd_to_pcl/pcd/: cube_60cm_ROS.pcd  cup_V1_ROS.pcd
catkin_ws/src/Single-Drone-Planner/pcd_to_pcl/scripts/: pub_pcl_from_pcd.py  save_pcd_pose_to_yaml.py
catkin_ws/src/Single-Drone-Planner/plan_env_lod/: CMakeLists.txt
catkin_ws/src/Single-Drone-Planner/plan_env_lod/config/: vis.rviz
catkin_ws/src/Single-Drone-Planner/plan_env_lod/include/plan_env_lod/: edt_environment.h  map_ros.h  obj_predictor.h  sdf_map.h  visualization.hpp
catkin_ws/src/Single-Drone-Planner/plan_env_lod/launch/: gen_lod_map.launch
catkin_ws/src/Single-Drone-Planner/plan_env_lod/src/: edt_environment.cpp  gen_occmap_node.cpp  lod_map_node.cpp  map_ros.cpp  obj_predictor.cpp  raycast.cpp  sdf_map.cpp
catkin_ws/src/Single-Drone-Planner/planning/planning/: CMakeLists.txt
catkin_ws/src/Single-Drone-Planner/planning/planning/config/: config.yaml  config_origin.yaml  goal_gazebo.rviz  goal_rviz.rviz
catkin_ws/src/Single-Drone-Planner/planning/planning/launch/: planning.launch  real_planning.launch  simu_map_and_sensor.launch  simulation_gazebo.launch  simulation_rviz_goal.launch  simulation_rviz_sensing.launch  simulation_tl.launch  simulation_unity.launch  simulation_world_pcl.launch  test_mapping.launch
catkin_ws/src/Single-Drone-Planner/realflight_modules/FAST_LIO/: CMakeLists.txt  README.md
catkin_ws/src/Single-Drone-Planner/realflight_modules/FAST_LIO/PCD/: new.pcd
catkin_ws/src/Single-Drone-Planner/realflight_modules/FAST_LIO/config/: anomaly_detection.yaml  initial_align.yaml  mid360.yaml
catkin_ws/src/Single-Drone-Planner/realflight_modules/FAST_LIO/include/: preprocess.h
catkin_ws/src/Single-Drone-Planner/realflight_modules/FAST_LIO/launch/: initial_align.launch  initial_map_publisher.launch  lidar.launch  mapping_mid360.launch  odom_mid360_with_map.launch  rviz.launch
catkin_ws/src/Single-Drone-Planner/realflight_modules/FAST_LIO/msg/: CPUUsage.msg  LioDebug.msg
catkin_ws/src/Single-Drone-Planner/realflight_modules/FAST_LIO/rviz_cfg/: loam_livox.rviz
catkin_ws/src/Single-Drone-Planner/realflight_modules/FAST_LIO/src/: IMU_Processing.hpp  cpu_monitor.cpp  initial_align.cpp  initial_map_publisher.cpp  laserMapping.cpp  preprocess.cpp
catkin_ws/src/Single-Drone-Planner/uav_simulator/mod_simulator/fake_mod/: CMakeLists.txt  (+1 more)
catkin_ws/src/Single-Drone-Planner/utilities/quadrotor_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/Single-Drone-Planner/utilities/rosbag_direct_write/: CMakeLists.txt
catkin_ws/src/drone_logger/: CMakeLists.txt  package.xml
catkin_ws/src/drone_logger/launch/: logger.launch
catkin_ws/src/drone_logger/msg/: DroneFullState.msg
catkin_ws/src/drone_logger/scripts/: payload_cli.py
catkin_ws/src/drone_logger/srv/: SetPayload.srv
catkin_ws/src/drone_tools/: CMakeLists.txt
catkin_ws/src/drone_tools/scripts/: joy_to_position_cmd.py  key_to_joy_UAM.py  mujoco_goal_picker.py
catkin_ws/src/mujoco_bridge/: CMakeLists.txt  CMakeLists.txt.save
catkin_ws/src/mujoco_bridge/launch/: mujoco_sim.launch
catkin_ws/src/mujoco_bridge/scripts/: fixed_cam_pub.py  mujoco_depth_pub.py  mujoco_ros_bridge.py
catkin_ws/src/mujoco_bridge/scripts/bridge/: physics.py  planning_gate.py  viewer_vis.py
catkin_ws/src/mujoco_perception/: CMakeLists.txt
catkin_ws/src/mujoco_perception/cfg/: config.yaml
catkin_ws/src/mujoco_perception/launch/: gt_pipeline.launch  yoloe_pipeline.launch
catkin_ws/src/mujoco_perception/scripts/: mujoco_gt_seg_pub.py  mujoco_rgb_depth_pub.py
catkin_ws/src/task_manager/: CMakeLists.txt  package.xml
catkin_ws/src/task_manager/cfg/: config.yaml
catkin_ws/src/task_manager/launch/: task_manager.launch
catkin_ws/src/task_manager/scripts/: occlusion_analyzer.py  task_fsm.py
catkin_ws/src/yoloe_seg/: CMakeLists.txt
catkin_ws/src/yoloe_seg/cfg/: config.yaml
catkin_ws/src/yoloe_seg/launch/: yoloe_seg.launch
catkin_ws/src/yoloe_seg/scripts/: data_manager.py  yoloe_seg_node.py
(+304 files in other folders)
