<?xml version="1.0"?>
<package format="2">
  <name>drone_logger</name>
  <version>0.1.0</version>
  <description>
    Full drone state logging and payload control for mujoco_ros1_docker simulation.
    Provides DroneFullState.msg (angular velocity, acceleration, inertia, mass,
    Px4Ctrl signals, PD force/torque) and SetPayload.srv (runtime mass/COM control).
  </description>
  <maintainer email="lab@lab.com">lab</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
