<?xml version="1.0"?>
<package format="2">
  <name>task_manager</name>
  <version>0.1.0</version>
  <description>Task-level occlusion detection and sequencing for drone manipulation.</description>

  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>
</package>
