<?xml version="1.0"?>
<package format="2">
    <name>key_to_camPos</name>
    <version>1.0.0</version>
    <description>
        The key_to_cmd package is just for ROS courses
    </description>
    <author>ZJU CSC</author>
    <maintainer email="csc@zju.edu.cn">zju_csc</maintainer>
    <license>GPL 3.0 </license>
    <url></url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>quadrotor_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>tf</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>quadrotor_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>quadrotor_msgs</exec_depend>

    <export>
    </export>

</package>
